# wayscribe

./: .gitignore  BACKEND.md  CLAUDE.md  DEVELOPMENT.md  README.md  SETUP.md  new-task.md  pyproject.toml  whisper.npu.code-workspace
.claude/: settings.json
deploy/: .env.example  compose.yaml
flm_voice/: __main__.py  config.py  daemon.py  ipc.py  keyboard.py  output.py  recorder.py  transcriber.py
flm_voice/overlay/: indicator.py  result.py
flm_voice/service/: flm-voice.service
packaging/: config.example.toml  flm-voice.spec  wayscribe.service  wayscribe.spec
scripts/: bench_transcribe.py  build-binary.sh  build-rpm.sh  gen_langdata.py  gen_trigrams.py  install-kde-hotkey.sh
tests/: test_autocorrect.py  test_doctor.py  test_fix.py  test_keyboard.py  test_langdetect.py  test_language.py  test_layout.py  test_live_notify.py  test_llm.py  test_notify.py  test_outputs.py  test_recorder.py  test_selection.py  test_skeleton.py  test_vad.py
wayscribe/: __init__.py  __main__.py  autocorrect.py  config.py  daemon.py  doctor.py  ipc.py  keyboard.py  langdetect.py  layout.py  llm.py  output.py  recorder.py  selection.py  transcriber.py
wayscribe/service/: wayscribe.service
