[project]
name = "flm-voice"
version = "0.1.0"
description = "Voice-to-text overlay for KDE Plasma Wayland, backed by FastFlowLM Whisper on AMD NPU"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Vladislav Zverev" }]
dependencies = [
    "PyQt6>=6.6",
    "sounddevice>=0.4",
    "httpx>=0.27",
    "numpy>=1.26",
]

[project.optional-dependencies]
vad = ["silero-vad", "onnxruntime"]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-qt>=4.4",
    "ruff>=0.5",
]

[project.scripts]
flm-voice = "flm_voice.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["flm_voice"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
