[project]
name = "wayscribe"
version = "0.4.2"
description = "Hotkey-driven voice-to-text for KDE Plasma Wayland, backed by FastFlowLM Whisper on AMD NPU"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Vladislav Zverev" }]
dependencies = [
    "sounddevice>=0.4",
    "httpx>=0.27",
    "numpy>=1.26",
    # Global autocorrect reads /dev/input (keylogger-class, opt-in at runtime via
    # `wayscribe autocorrect` + the evdev_autocorrect config gate). Imported
    # lazily, so a missing/uninstallable evdev only disables that one feature.
    "evdev>=1.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]
build = [
    "pyinstaller>=6",
]

[project.scripts]
wayscribe = "wayscribe.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["wayscribe"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]

[tool.ruff.lint.per-file-ignores]
# Cyrillic↔Latin layout fixer: ambiguous-character lints (RUF001/2/3) fire on
# the intentional Cyrillic glyphs in keymaps, trigram tables, and test data.
"wayscribe/layout.py" = ["RUF001", "RUF002", "RUF003"]
"wayscribe/langdetect.py" = ["RUF001", "RUF002", "RUF003"]
"wayscribe/_langdata.py" = ["RUF001", "RUF002", "RUF003"]  # generated Cyrillic tables
"wayscribe/selection.py" = ["RUF001", "RUF002", "RUF003"]
"wayscribe/autocorrect.py" = ["RUF001", "RUF002", "RUF003"]
"wayscribe/daemon.py" = ["RUF001", "RUF002", "RUF003"]
"wayscribe/output.py" = ["RUF001", "RUF002", "RUF003"]
"tests/test_layout.py" = ["RUF001", "RUF002", "RUF003"]
"tests/test_langdetect.py" = ["RUF001", "RUF002", "RUF003"]
"tests/test_selection.py" = ["RUF001", "RUF002", "RUF003"]
"tests/test_fix.py" = ["RUF001", "RUF002", "RUF003"]
"tests/test_autocorrect.py" = ["RUF001", "RUF002", "RUF003"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
